# numpy-client

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  test_numpy_server.py
client/: CMakeLists.txt  TODO  TODO.org
client/include/: blob.hpp  camera.hpp  client.hpp  face_align.h  message.hpp  model.hpp  scrfd.h  scrfd_crop.hpp  session.hpp  tensor.hpp
client/src/: camera.cpp  client.cpp  face_align.cpp  message.cpp  model.cpp  scrfd.cpp  scrfd_crop.cpp  session.cpp  tensor.cpp
include/: CMakeLists.txt  packet.proto
